--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_local_notifications: ^13.0.0
+  connectivity_plus: ^3.0.3
+  firebase_core: ^2.1.1
+  firebase_crashlytics: ^3.0.4
+  firebase_messaging: ^14.1.4
+  flutter_easyloading: ^3.0.5
+  pdf: ^3.8.4
 
 dev_dependencies:
   flutter_test:
